Nueva clase Consola modificada para que sus métodos puedan usar ArrayList.